--- a/src/locales/en/token.json
+++ b/src/locales/en/token.json
@@ -38,7 +38,7 @@
       },
       "howToCashout": {
         "title": "How do I cashout tJOY to USD?",
-        "text": "We use Bitcoin Cash (BCH) as a payment rail on our testnets. You can cashout tJOY by making a transfer to the dedicated burn address: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Before doing this, you should set the <0>memo</0> of the key from which the transfer is made to your BCH address. At the moment of the transfer, the BCH to USD exchange rate is locked. <1/><1/>More information on payouts can be found <2>here</2>."
+        "text": "We use Bitcoin Cash (BCH) as a payment rail on our testnets. You can cashout tJOY by making a transfer to the dedicated burn address: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Before doing this, you should set the <0>memo</0> of the key which the transfer is made from to your BCH address. The USD to BCH exchange rate is calculated at the moment of sending the BCH. <1/><1/>More information on payouts can be found <2>here</2>."
       },
       "howToEarn": {
         "title": "How can I earn mainnet JOY?",
