Shorten Terms and Conditions to T&C, resizing updates do not reset the form anymore

--- a/src/locales/en/founding-members.json
+++ b/src/locales/en/founding-members.json
@@ -120,7 +120,7 @@
         "accountInfo": "Account",
         "keyFile": "Key file",
         "summary": "Summary",
-        "acceptTerms": "Terms & conditions",
+        "acceptTerms": "T&C",
         "acceptTermsShort": "Terms & cond."
       },
       "membership": {
