Fixed translation according to katerina510's comments

--- a/src/locales/ru/sumer.json
+++ b/src/locales/ru/sumer.json
@@ -5,34 +5,34 @@
     },
     "hero": {
       "title": "Сеть Sumer",
-      "text": "Кроме прочих изменений, выпуск тестнета Sumer вносит серьезные улучшения в процессе загрузки контента через наше приложение для воспроизведения."
+      "text": "Кроме прочих изменений, выпуск тестнета Sumer вносит серьезные улучшения в процесс загрузки контента через наше приложение для воспроизведения."
     },
     "criticalDocuments": {
       "title": "Важная документация",
       "releasePlan": {
-        "title": "Релиз план",
-        "text": "Прочтите релиз план в том виде, в котором он был создан во время планирования, и узнайте, как проходила разработка."
+        "title": "План релиза",
+        "text": "Прочтите план релиза в том виде, в котором он был создан во время планирования, и узнайте, как проходила разработка."
       },
       "blogPost": {
-        "title": "Объявление в блоге",
-        "text": "Ознакомьтесь с кратким руководством по тестнету Sumer и его целям."
+        "title": "Анонс в блоге",
+        "text": "Ознакомьтесь с кратким описанием тестнета Sumer и его целям."
       }
     },
     "testnetGoals": {
-      "title": "Цели Тестнета",
+      "title": "Цели тестнета",
       "subtitle": "Изложенные ниже пункты являются упрощенным представлением основных целей тестнета Sumer.",
       "goals": {
         "contentPublishing": {
-          "title": "Добавить возможность публикации контента из интерфейса для воспроизведения.",
-          "text": "Предоставление в Sumer возможности создания и управления видео и каналами из Joystream Player, замещая аналогичный функционал в тестнете Antioch, который был неудобным, технически сложным и требовал работы в командной строке."
+          "title": "Добавление возможности публикации контента из интерфейса для воспроизведения",
+          "text": "Sumer предоставляет возможность создания и управления видео и каналами из Joystream Player, замещая аналогичный функционал в тестнете Antioch, который был неудобным, технически сложным и требовал работы с командной строкой."
         },
         "deployingNewContentDirectory": {
           "title": "Публикация нового каталога контента",
-          "text": "Представление простого системного компонента по управлению контентом в Sumer, так как далее мириться с техническими сложностями и компромиссами, как было в прошлых версиях каталога, стало невозможным."
+          "text": "В тестнете Sumer мы представим простой нативный загрузочный модуль, так как далее мириться с техническими сложностями и компромиссами, как было в прошлых версиях каталога, стало невозможным."
         },
         "enableBuilderRole": {
           "title": "Внедрение роли разработчика платформы",
-          "text": "Введение новой рабочей группы, специализирующейся на функциональных улучшениях платформы. Изначально мы также планировали включение новой роли \"Шлюз\", но это не вошло в релиз Sumer."
+          "text": "Мы вводим новую рабочую группу, специализирующуюся на функциональных улучшениях платформы. Изначально мы также планировали включение новой роли \"Шлюз\", но это не вошло в релиз Sumer."
         }
       }
     },
@@ -41,7 +41,7 @@
     },
     "map": {
       "title": "Шумеры",
-      "text": "<0>Шумеры являются самой ранней известной цивилизацией в историческом регионе южной Месопотамии</0>, возникшие в эпоху энеолита и ранней бронзы между шестым и пятым тысячелетиями до н.э.<1/><1/>Проживая в долинах Тигра и Евфрата, шумерские земледельцы выращивали множество зерновых и других культур, излишки которых позволяли им создавать городские поселения. Считается, что именно в этом регионе возникли самые ранние формы письменности.<1/><1/><2><0/> Читать в блоге</2>"
+      "text": "<0>Шумеры являются самой ранней из известных цивилизаций в историческом регионе Южной Месопотамии</0>, возникшей в эпоху энеолита и ранней бронзы между шестым и пятым тысячелетиями до н.э.<1/><1/>Проживая в долинах Тигра и Евфрата, шумерские земледельцы выращивали множество зерновых и других культур, излишки которых позволяли им создавать городские поселения. Считается, что именно в этом регионе возникли самые ранние формы письменности.<1/><1/><2><0/> Читать в блоге</2>"
     }
   }
 }
