Added translation fixes.

--- a/src/locales/ru/sumer.json
+++ b/src/locales/ru/sumer.json
@@ -5,7 +5,7 @@
     },
     "hero": {
       "title": "Сеть Sumer",
-      "text": "Кроме прочих изменений, выпуск тестнета Sumer вносит серьезные улучшения в процесс загрузки контента через наше приложение для воспроизведения."
+      "text": "Кроме прочих изменений, релиз тестнета Sumer вносит серьезные улучшения в процесс загрузки контента через наше приложение для воспроизведения."
     },
     "criticalDocuments": {
       "title": "Важная документация",
@@ -15,7 +15,7 @@
       },
       "blogPost": {
         "title": "Анонс в блоге",
-        "text": "Ознакомьтесь с кратким описанием тестнета Sumer и его целям."
+        "text": "Ознакомьтесь с кратким описанием тестнета Sumer и его целями."
       }
     },
     "testnetGoals": {
