Fixes to Sparta translation

--- a/src/locales/ru/sparta.json
+++ b/src/locales/ru/sparta.json
@@ -10,23 +10,23 @@
     },
     "heroCard": {
       "title": "ОТКАЗ СЕТИ",
-      "markdown": "\n ### ОБНАРУЖЕНА НЕИСПРАВНОСТЬ\n\n  В пятницу, 29 марта, сеть Sparta вышла из строя из-за [известного бага в Substrate](https://github.com/paritytech/substrate/pull/2130) который не был устранен перед выпуском.\n\n  Подробная информация [в блоге](https://blog.joystream.org/sparta-sacked/)."
+      "markdown": "\n ### ОБНАРУЖЕН СБОЙ\n\n  В пятницу, 29 марта, сеть Sparta вышла из строя из-за [известного бага в Substrate](https://github.com/paritytech/substrate/pull/2130), который не был устранен до релиза.\n\n  Подробная информация [в блоге](https://blog.joystream.org/sparta-sacked/)."
     },
     "modal": {
-      "title": "Шлем Спарты",
-      "text": "<0>Спартанский армейский шлем</0> олицетворяет то, чем сейчас наиболее известна Спарта, ее военную мощь. Для своего времени она также была известна своей выдающейся системой управления."
+      "title": "Шлем спартанской армии",
+      "text": "<0>Спартанский армейский шлем</0> олицетворяет то, чем сейчас наиболее известна Спарта, - ее военную мощь. Она также была известна развитой для своего времени системой управления."
     },
     "testnetGoals": {
       "title": "Цели тестнета",
-      "subtitle": "Цели, приведенные ниже, являются упрощенным представлением ключевых результатов, перечисленных в нашем релизе OKR.",
+      "subtitle": "Указанные ниже цели дают общее представление о ключевых результатах, перечисленных в нашем релизе OKR.",
       "goals": {
         "blockchain": {
           "title": "Построение и релиз блокчейна с работающим Советом",
-          "text": "В качестве \"медиа-платформы, управляемой пользователями\", наша главная цель - предоставить пользователям возможность избирать <0>членов Совета</0>, которые будут представлять интересы пользователей в повседневных действиях."
+          "text": "Наша главная цель как медиаплатформы, управляемой пользователями, была в том, чтобы предоставить им возможность избирать членов Совета, которые будут представлять их интересы в повседневной работе."
         },
         "bugs": {
-          "title": "Поддержка критических ошибок на приемлемом уровне",
-          "text": "Как показывает факт выхода нашей сети из строя, мы не достигли этой цели."
+          "title": "Поддержание количества критических ошибок на приемлемом уровне",
+          "text": "Как показал факт выхода нашей сети из строя, мы не достигли этой цели."
         }
       }
     },
@@ -34,8 +34,8 @@
       "title": "Поощряемые роли в сети Sparta"
     },
     "map": {
-      "title": "Город Sparta",
-      "text": "<0>Спарта была выдающимся городом-государством в Древней Греции.</0> Помимо своей военной мощи, она была уникальной среди своих греческих соперников благодаря  четко определенной социальной системе и конституции. <1/><1/> Мы выбрали название \"Спарта\" из-за ее исторического значения на пути к демократии и верховенству закона, каким бы суровым по современным меркам он ни был."
+      "title": "Город Спарта",
+      "text": "<0>Спарта была выдающимся городом-государством в Древней Греции.</0> Помимо военной мощи, она обладала уникальной как для своего времени, так и в сравнении с ее греческими конкурентами четко определенной социальной системой и конституцией. <1/><1/> Мы выбрали название \"Спарта\" из-за ее исторического значения на пути к демократии и верховенству закона, каким бы суровым по современным меркам он ни был."
     }
   }
 }
