Token page translation fixes

--- a/src/locales/ru/token.json
+++ b/src/locales/ru/token.json
@@ -2,16 +2,16 @@
   "token": {
     "siteMetadata": {
       "title": "Токен",
-      "description": "Участники наших тестнетов теперь могут зарабатывать тестовые токены Joystream (tJOY), поддерживаемые фиатной валютой."
+      "description": "Участники наших тестнетов теперь могут зарабатывать тестовые токены Joystream (tJOY), обеспеченные фиатной валютой."
     },
     "hero": {
       "title": "Описание токена tJOY",
-      "text": "Участники наших тестнетов теперь могут зарабатывать тестовые токены Joystream (tJOY), поддерживаемые фиатной валютой.",
+      "text": "Участники наших тестнетов теперь могут зарабатывать тестовые токены Joystream (tJOY), обеспеченные фиатной валютой.",
       "tokenStats": {
         "title": "Токен в цифрах",
         "exchangeRate": "Курс обмена",
-        "backingValue": "Значение обеспечения",
-        "supply": "Кол-во токенов"
+        "backingValue": "Величина обеспечения",
+        "supply": "Количество токенов"
       }
     },
     "faq": {
@@ -26,7 +26,7 @@
       },
       "purposeOfTJoy": {
         "title": "Как можно использовать tJOY?",
-        "text": "tJOY можно использовать в наших тестнетах так же, как будущие пользователи платформы Joystream смогут использовать токен JOY в основной сети. Три основных функции tJOY - это стейкинг, управление и оплата.<0/><0/> Например, для участия в ролях тестнета пользователям может потребоваться стейкинг tJOY. Для создания предложений по управлению и для голосования на выборах в члены Совета также требуется tJOY. Наконец, в тестнете при выполнении грантов и расчетах KPI, tJOY используются для выплат участникам, которые вносят активный вклад."
+        "text": "tJOY можно использовать в наших тестнетах так же, как будущие пользователи платформы Joystream смогут использовать токен JOY в основной сети. Три основных функции tJOY - это стейкинг, управление и оплата.<0/><0/> Например, для участия в ролях тестнета пользователям может потребоваться стейкинг tJOY. Для создания предложений по управлению и для голосования на выборах в члены Совета также требуется tJOY. Наконец, в тестнете при выполнении грантов и расчетах KPI tJOY используются для выплат участникам, которые вносят активный вклад."
       },
       "whereCanTJoyBeObtained": {
         "title": "Как можно получить tJOY?",
@@ -37,12 +37,12 @@
         "text": "Нет прямой связи между tJOY и токеном основной сети JOY. Мы используем tJOY для моделирования реальных экономических стимулов в основной сети, развивая платформу и способствуя росту и обучению нашего сообщества для подготовки перехода от тестнета к основной сети."
       },
       "howToCashout": {
-        "title": "Как обменять tJOY в USD?",
-        "text": "Мы используем Bitcoin Cash (BCH) в качестве криптовалюты для вывода средств в наших тестнетах. Вы можете обналичить tJOY, сделав перевод на специальный адрес для утилизации тестовых токенов: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Перед тем как это сделать, вы должны установить в поле <0>memo</0> ключа, с которого осуществляется перевод, адрес вашего кошелька BCH. Курс обмена BCH/USD фиксируется на момент осуществления перевода.<1/><1/>С детальной информацией о выплатах можно ознакомиться <2>здесь</2>."
+        "title": "Как обменять tJOY на USD?",
+        "text": "Мы используем Bitcoin Cash (BCH) в качестве криптовалюты для вывода средств в наших тестнетах. Вы можете обналичить tJOY, сделав перевод на специальный адрес для сжигания тестовых токенов: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> . Перед тем как это сделать, вы должны установить в поле <0>memo</0> ключа, с которого осуществляется перевод, адрес вашего кошелька BCH. Курс обмена BCH/USD фиксируется на момент осуществления перевода.<1/><1/>С детальной информацией о выплатах можно ознакомиться <2>здесь</2>."
       },
       "howToEarn": {
         "title": "Как заработать токены основной сети JOY?",
-        "text": "В настоящее время единственным способом обеспечения аллокации JOY основной сети является внесение качественного вклада в платформу и сообщество посредством нашей <0>программы Ключевых участников</0>."
+        "text": "В настоящее время единственным способом обеспечения аллокации JOY основной сети является внесение качественного вклада в платформу и сообщество посредством нашей <0>программы членов-основателей</0>."
       },
       "TJoyWorth": {
         "title": "Сколько стоит tJOY?",
@@ -51,7 +51,7 @@
     },
     "cashouts": {
       "title": "Ожидаемые выплаты",
-      "subtitle": "Токены, отправленные Jsgenesis на обмен, аннулируются, поэтому конечная стоимость токенов остается неизменной при осуществлении обмена.",
+      "subtitle": "Токены, отправленные Jsgenesis на обмен, сжигаются, поэтому конечная стоимость токенов остается неизменной при осуществлении обмена.",
       "cashout": {
         "address": "Адрес отправителя",
         "tokensTransferred": "Отправленные токены",
@@ -61,7 +61,7 @@
       }
     },
     "cta": {
-      "title": "Присоединяйтесь к нашему Discord и изменяйте индустрию онлайн видео сервисов"
+      "title": "Присоединяйтесь к нашему Discord и изменяйте индустрию онлайн-видеосервисов"
     }
   }
 }
