Fixed Rome translation

--- a/src/locales/ru/rome.json
+++ b/src/locales/ru/rome.json
@@ -9,7 +9,7 @@
       "chipText": "Что это?"
     },
     "heroCard": {
-      "title": "ЗАМЕНЕН НА CONSTANTINOPLE"
+      "title": "ЗАМЕНЕНА НА CONSTANTINOPLE"
     },
     "modal": {
       "title": "Rome",
@@ -36,15 +36,15 @@
         },
         "content": {
           "title": "Заполнение каталога различным контентом",
-          "text": "Мы выпускаем в Rome новую систему Каталога контента, которая, с одной стороны, рассчитанна на длительный срок службы, а с другой - на постоянные улучшения. Мы будем оплачивать загрузку различного содержимого Создателям контента, надеясь, что результаты нас многому научат."
+          "text": "Мы выпускаем в Rome новую систему каталога контента, которая, с одной стороны, рассчитана на длительный срок службы, а с другой - на постоянные улучшения. Мы будем оплачивать загрузку различного содержимого создателям контента, надеясь, что результаты нас многому научат."
         },
         "contentCurator": {
-          "title": "Введение новой роли Контент куратора",
-          "text": "С введением нового каталога контента и поощрений за публикации, нам необходим мониторинг. Чтобы стать Контент куратором, необходимо будет выполнить процедуру стейкинга. Кураторы будут получать оплату как в токенах тестнета, так и в Monero."
+          "title": "Введение новой роли куратора контента",
+          "text": "С введением нового каталога контента и поощрений за публикации нам необходим мониторинг. Чтобы стать куратором контента, необходимо будет выполнить процедуру стейкинга. Кураторы будут получать оплату как в токенах тестнета, так и в Monero."
         },
         "contentCreator": {
-          "title": "Добавление профилей Создателей контента",
-          "text": "Без Создателей контента не было бы никакого контента. Может показаться, что кроме необходимости быть участником, добавление новой роли выглядит как дополнительное препятствие, но это позволит пользователям загружать контент, используя различные профили."
+          "title": "Добавление профилей создателей контента",
+          "text": "Без создателей контента не было бы никакого контента. Разумеется, добавление дополнительной роли поверх членства может создать определенный барьер, но это позволит пользователям загружать контент, используя разные профили."
         }
       }
     },
@@ -53,7 +53,7 @@
     },
     "map": {
       "title": "Rome",
-      "text": "<0>Рим был столицей великой Римской империи в период ее расцвета.</0> Как и в случае с предыдущими названиями тестнетов, Римская империя и Рим были еще одним важным шагом в развитии демократии, верховенства закона и современных структур управления.<1/><1/><2><0/> Информация о тестнете</2>"
+      "text": "<0>Рим был столицей великой Римской империи в период ее расцвета.</0> Подобно названиям предыдущих тестнетов, Римская империя и Рим были еще одним важным шагом в развитии демократии, верховенства закона и современных структур управления.<1/><1/><2><0/> Информация о тестнете</2>"
     }
   }
 }
