Fixed Acropolis translation

--- a/src/locales/ru/acropolis.json
+++ b/src/locales/ru/acropolis.json
@@ -9,11 +9,11 @@
       "chipText": "Что это?"
     },
     "heroCard": {
-      "title": "ЗАМЕНЕН НА ROME"
+      "title": "ЗАМЕНЕНА НА ROME"
     },
     "modal": {
       "title": "Афинский Акрополь",
-      "text": "<0>Известный своей великолепной архитектурой, Акрополь</0>, вероятно, является самым знаменитым строением Парфенона. Он был построен в честь победы над персидскими завоевателями, и сегодня является символом демократии и западной цивилизации."
+      "text": "<0>Известный своей великолепной архитектурой, Акрополь</0>, вероятно, является самым знаменитым строением Парфенона. Он был построен в честь победы над персидскими завоевателями и сегодня является символом демократии и западной цивилизации."
     },
     "criticalDocuments": {
       "title": "Важная документация",
@@ -32,19 +32,19 @@
       "goals": {
         "forum": {
           "title": "Создание и внедрение форума на технологии блокчейн",
-          "text": "Финальная версия платформы будет содержать множество средств для простого и безопасного обмена как публичной, так и личной информацией между участниками. Форум станет первым шагом, который позволит участникам платформы общаться, обмениваться идеями и вести обсуждения."
+          "text": "Финальная версия платформы будет предоставлять множество способов простого и безопасного обмена как публичной, так и личной информацией между участниками. Форум станет первым шагом, который позволит участникам платформы общаться, обмениваться идеями и вести обсуждения."
         },
         "storageNode": {
           "title": "Переработка и релиз узла хранения",
-          "text": "Старый узел содержал баги, которые блокировали синхронизацию между клиентами и требовал жестко прописанных зависимостей. Новый - работает как нужно, не требуя строгой иерархии или особых привилегий."
+          "text": "Старый узел содержал баги, которые блокировали синхронизацию между клиентами, и требовал жестко прописанных зависимостей. Новый работает как нужно, не требуя строгой иерархии или особых привилегий."
         },
         "storageProviders": {
-          "title": "Гарантирование высоких показателей доступности узлов хранилищ",
-          "text": "Общее впечатление от работы с платформой как создателей, так и потребителей контента, зависит от множества параметров. Но, вероятно, самым важным является то, как хранилище, к которому они подключаются, отвечает на запросы. За достижение этой цели отвечают как надежность программного обеспечения и качество систем оповещения, так и действия, предпринимаемые участниками."
+          "title": "Обеспечение высоких показателей доступности узлов хранилищ",
+          "text": "Общее впечатление от работы с платформой как создателей, так и потребителей контента зависит от множества параметров. Но, вероятно, самым важным является то, как хранилище, к которому они подключаются, отвечает на запросы. За достижение этой цели отвечают как надежность программного обеспечения и качество систем оповещения, так и действия, предпринимаемые участниками."
         },
         "tranches": {
           "title": "Построение узлов хранения на \"траншах\"",
-          "text": "Несмотря на то, что, на данном этапе, количество контента не так велико, наступит момент, когда дублирование полного набора данных на всех узлах станет невозможным. Транши позволят узлам хранения выбирать из полного каталога контента тот набор содержимого, хранение которого соответствует возможностям узла."
+          "text": "Несмотря на то что на данном этапе количество контента не так велико, наступит момент, когда дублирование полного набора данных на всех узлах станет невозможным. Транши позволят узлам хранения выбирать из полного каталога контента тот набор содержимого, хранение которого соответствует возможностям узла."
         }
       }
     },
@@ -53,7 +53,7 @@
     },
     "map": {
       "title": "Афинский Акрополь",
-      "text": "<0>Акрополь - это цитадель на холме в самом сердце Афин.</0> Он также находился в самом сердце Древней Греции, могущественной цивилизации и империи. Акрополь знаменит своими старинными зданиями, архитектурой, историческим значением, а также является одной из главных туристических достопримечательностей Афин. Он внесен в список UNESCO \"Объекты всемирного наследия\".<1/><1/> Мы выбрали название, так как нам пришлось сбавить амбиции в отношении следующего тестнета после определенных проблем с выпуском Athens. Таким образом, Acropolis можно считать дополнением к релизу, несмотря на то, что в него вошли некоторые новые возможности, которые изначально не были предназначены для тестнета Athens. <1/><1/> <2><0/> Информация о предыдущем тестнете</2>"
+      "text": "<0>Акрополь - это цитадель на холме в самом сердце Афин.</0> Он также находился в самом сердце Древней Греции, могущественной цивилизации и империи. Акрополь знаменит своими старинными зданиями, архитектурой, историческим значением, а также является одной из главных туристических достопримечательностей Афин. Он внесен в список ЮНЕСКО \"Объекты всемирного наследия\".<1/><1/> Мы выбрали название, так как нам пришлось сбавить амбиции в отношении следующего тестнета после определенных проблем с релизом Athens. Таким образом, Acropolis можно считать дополнением к релизу, несмотря на то что в него вошли некоторые новые возможности, которые изначально не были предназначены для тестнета Athens. <1/><1/> <2><0/> Информация о предыдущем тестнете</2>"
     }
   }
 }
