Minor fixes to Acropolis & Rome

--- a/src/locales/ru/acropolis.json
+++ b/src/locales/ru/acropolis.json
@@ -18,12 +18,12 @@
     "criticalDocuments": {
       "title": "Важная документация",
       "fullSpecifications": {
-        "title": "Полное описание",
+        "title": "Полные спецификации",
         "text": "Прочтите описание новых возможностей, представленных в Acropolis."
       },
       "releasePlan": {
         "title": "План релиза",
-        "text": "Прочтите план релиза в том виде, в котором он был составлен на этапе планирования и сравните с тем, как прошла разработка."
+        "text": "Прочтите план релиза в том виде, в котором он был составлен на этапе планирования, и сравните с тем, как прошла разработка."
       }
     },
     "testnetGoals": {
