--- a/src/locales/ru/rome.json
+++ b/src/locales/ru/rome.json
@@ -18,12 +18,12 @@
     "criticalDocuments": {
       "title": "Важная документация",
       "fullSpecifications": {
-        "title": "Полное описание",
-        "text": "Характеристики тестнета Rome не были опубликованы."
+        "title": "Полные спецификации",
+        "text": "Спецификации тестнета Rome не были опубликованы."
       },
       "releasePlan": {
         "title": "План релиза",
-        "text": "Прочтите план релиза в том виде, в котором он был составлен на этапе планирования и сравните с тем, как прошла разработка."
+        "text": "Прочтите план релиза в том виде, в котором он был составлен на этапе планирования, и сравните с тем, как прошла разработка."
       }
     },
     "testnetGoals": {
