Fixes to Alexandria translation

--- a/src/locales/ru/alexandria.json
+++ b/src/locales/ru/alexandria.json
@@ -13,7 +13,7 @@
     },
     "modal": {
       "title": "Александрия",
-      "text": "В Египте, на месте Столпа Помпея в Александрии, находятся два сфинкса. Сфинксы и связанная с ними колонна являются одними из важнейших древних памятников Александрии. <0/><0/> Не следует путать Александрийских сфинксов с более известным великим сфинксом, находящимся в Гизе чуть менее чем в 200-х километрах к юго-востоку от Александрии."
+      "text": "В Египте, у основания столпа Помпея в Александрии, находятся два сфинкса. Сфинксы и связанная с ними колонна являются одними из важнейших древних памятников Александрии. <0/><0/> Не следует путать александрийских сфинксов с более известным Большим Сфинксом, находящимся в Гизе чуть менее чем в 200-х километрах к юго-востоку от Александрии."
     },
     "criticalDocuments": {
       "title": "Важная документация",
@@ -23,7 +23,7 @@
       },
       "blogPost": {
         "title": "Анонс в блоге",
-        "text": "Прочтите краткую информацию о тестнете Alexandria и его целям."
+        "text": "Прочтите краткую информацию о тестнете Alexandria и его целях."
       }
     },
     "testnetGoals": {
@@ -36,7 +36,7 @@
         },
         "substrateVersion": {
           "title": "Переход к Substrate v2.0.0 RC4",
-          "text": "Мы переходим на новую версию Substrate чтобы иметь возможность использовать большое количество улучшений и не дать нашему растущему продукту отставать от современных тенденций."
+          "text": "Мы переходим на новую версию Substrate, чтобы иметь возможность использовать большое количество улучшений и не дать нашему растущему продукту отставать от современных тенденций."
         },
         "networkTesting": {
           "title": "Совершенствование средств тестирования сети",
@@ -49,7 +49,7 @@
     },
     "map": {
       "title": "Александрия",
-      "text": "<0>Александрия была основана примерно в 331 г. до н.э. Александром Македонским.</0> Прежде всего, город был известен Александрийским маяком, одним из семи чудес света, а также огромной Великой библиотекой.<1/><1/> На протяжении большей части эллинистической эпохи и поздней античности, Александрия была интеллектуальным и культурным центром древнего Средиземноморья. До завоевания Римом, это был один из самых крупных городов древнего мира.<1/><1/><2><0/> Читать в блоге</2>"
+      "text": "<0>Александрия была основана примерно в 331 г. до н.э. Александром Македонским.</0> Прежде всего город был известен Александрийским маяком, одним из семи чудес света, а также огромной Великой библиотекой.<1/><1/> На протяжении большей части эллинистической эпохи и поздней античности Александрия была интеллектуальным и культурным центром древнего Средиземноморья. До завоевания Римом это был один из самых крупных городов древнего мира.<1/><1/><2><0/> Читать в блоге</2>"
     }
   }
 }
