Fixed Antioch translation

--- a/src/locales/ru/antioch.json
+++ b/src/locales/ru/antioch.json
@@ -5,7 +5,7 @@
     },
     "hero": {
       "title": "Сеть Antioch",
-      "text": "Релиз Antioch направлен на исправление бага, который вызвал разрыв в блокчейне, который, к сожалению, стал причиной прекращения работы предыдущего тестнета."
+      "text": "Релиз Antioch направлен на исправление бага, который вызвал разрыв в блокчейне, ставший, к сожалению, причиной прекращения работы предыдущего тестнета."
     },
     "heroCard": {
       "title": "ЗАМЕЩЕНА SUMER"
@@ -13,12 +13,12 @@
     "criticalDocuments": {
       "title": "Важная документация",
       "releasePlan": {
-        "title": "Релиз план",
-        "text": "Прочтите план релиза в том виде, в котором он был составлен на этапе планирования и сравните с тем, как прошла разработка."
+        "title": "План релиза",
+        "text": "Прочтите план релиза в том виде, в котором он был составлен на этапе планирования, и сравните с тем, как прошла разработка."
       },
       "blogPost": {
         "title": "Анонс в блоге",
-        "text": "Прочтите краткую информацию о тестнете Antioch и его целям."
+        "text": "Прочтите краткую информацию о тестнете Antioch и его целях."
       }
     },
     "testnetGoals": {
